tests/rascal/negative/type_errors/L1/20_expression_ES10_D4_63.ob
MODULE Test20;
VAR
  y: INTEGER;
  q: BOOLEAN;
  x: INTEGER;
  p: BOOLEAN;
  z: INTEGER;
  r: BOOLEAN;

BEGIN
               q := ((((2 MOD 200) + (x DIV x)) + ((0 - x) * (- 2))) # (+ (+ (x + 1223))));
               z := (+ (((+ 1) * (2 MOD x)) + ((+ 0) + (z - 1))));
               z := (((+ (x DIV 2)) MOD (- (y + 200))) - (((1 DIV 200) DIV (- x)) - (- (1223 MOD z))));
               r := ((((1 # 200) & (x = 0)) & ((x + x) < (1 * 1223))) & (((- 1223) - (- 2)) >= ((- y) + (1223 MOD 0))));
               r := ((((2 + 200) * (0 - x)) + ((1223 DIV z) + (+ x))) <= (((z + x) + (200 * 0)) * (- (0 - y))));
               z := ((- ((z DIV 1223) * (- 0))) * (+ ((- 2) DIV (z MOD 2))));
               r := ((((200 + 0) DIV (- 0)) * ((- 1223) * (- 1))) >= (((1223 DIV x) DIV (2 DIV 1)) DIV (- (2 - y))));
               r := (((+ (0 MOD z)) MOD ((- 1) - (x DIV 0))) <= (- (+ (200 + x))));
               z := ((- (- (x DIV 1223))) MOD (((z MOD 1) DIV (0 + 0)) * (- (y * 1))));
  (* error *)  x := ((((- r) - (2 - 0)) MOD ((+ y) MOD (0 DIV y))) * (((2 MOD 200) + (+ z)) MOD ((200 MOD z) + (+ 0))))
END Test20.